Updated 1-st lecture presentation (TypeScript - intro)

--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -51,6 +51,34 @@
 </section>
 
 <section class="slide">
+    <h2>TypeScript</h2>
+    <p>
+        Розвиток TypeScript розпочався наприкінці 2012 року. Хоча він виник в компанії Microsoft, його фактичним творцем є програміст Андерс Хейлсберг, також відомий як творець таких мов, як Delphi, C#. Проте цей проект відразу став розвиватися як OpenSource. І вже з самого початку нова мова швидко поширилась через свою гнучкість і продуктивність. Популярність і актуальність ідей нової мови призвели до того, що деякі з цих ідей пізніше стали частиною нового стандарту JavaScript. Переваги TypeScript були взяті на озброєння творцями ряду поширених і широко використовуваних фреймворків, таких як Angular 2+ та Vue3.
+    </p>
+</section>
+
+<section class="slide">
+    <h2>TypeScript</h2>
+    <p>
+        По-перше, слід зазначити, що TypeScript - це строго типізована та компільована мова, що може бути ближчою до програмістів Java, C# і інших строго типізованих мов. На виході компілятор створює той самий JavaScript, який потім виконується браузером. Однак строга типізація зменшує кількість потенційних помилок, які могли б виникнути при розробці на JavaScript.
+    </p>
+    <p>
+        По-друге, TypeScript реалізує багато концепцій, які є властивими об'єктно-орієнтованим мовам, таким як інкапсуляція, наслідування, поліморфізм та модифікатори доступу тощо.
+    </p>
+</section>
+
+<section class="slide">
+    <h2>TypeScript</h2>
+    <p>
+        По-третє, потенціал TypeScript дозволяє швидше і простіше писати великі складні програми, відповідно їх легше підтримувати, розвивати, масштабувати та тестувати, ніж на стандартному JavaScript.
+    </p>
+    <p>
+        По-четверте, TypeScript розвивається як проект з відкритим кодом і, як і багато інших проектів, розміщений на GitHub. Адреса репозиторію -
+        <a href="https://github.com/Microsoft/TypeScript" target="_blank">https://github.com/Microsoft/TypeScript</a>. Крім того, він є крос-платформеним, що означає, що для розробки ми можемо використовувати як Windows, так і MacOS або Linux.
+    </p>
+</section>
+
+<section class="slide">
     <h2>Чому потрібно вивчати TypeScript?</h2>
     <p>Дослідження DOU:</p>
     <ul>
