--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -53,28 +53,41 @@
 <section class="slide">
     <h2>TypeScript</h2>
     <p>
-        Розвиток TypeScript розпочався наприкінці 2012 року. Хоча він виник в компанії Microsoft, його фактичним творцем є програміст Андерс Хейлсберг, також відомий як творець таких мов, як Delphi, C#. Проте цей проект відразу став розвиватися як OpenSource. І вже з самого початку нова мова швидко поширилась через свою гнучкість і продуктивність. Популярність і актуальність ідей нової мови призвели до того, що деякі з цих ідей пізніше стали частиною нового стандарту JavaScript. Переваги TypeScript були взяті на озброєння творцями ряду поширених і широко використовуваних фреймворків, таких як Angular 2+ та Vue3.
+        Розвиток TypeScript розпочався наприкінці 2012 року. Хоча він виник в компанії Microsoft, його фактичним творцем
+        є програміст Андерс Хейлсберг, також відомий як творець таких мов, як Delphi, C#. Проте цей проект відразу став
+        розвиватися як OpenSource. І вже з самого початку нова мова швидко поширилась через свою гнучкість і
+        продуктивність. Популярність і актуальність ідей нової мови призвели до того, що деякі з цих ідей пізніше стали
+        частиною нового стандарту JavaScript. Переваги TypeScript були взяті на озброєння творцями ряду поширених і
+        широко використовуваних фреймворків, таких як Angular 2+ та Vue3.
     </p>
 </section>
 
 <section class="slide">
     <h2>TypeScript</h2>
     <p>
-        По-перше, слід зазначити, що TypeScript - це строго типізована та компільована мова, що може бути ближчою до програмістів Java, C# і інших строго типізованих мов. На виході компілятор створює той самий JavaScript, який потім виконується браузером. Однак строга типізація зменшує кількість потенційних помилок, які могли б виникнути при розробці на JavaScript.
+        По-перше, слід зазначити, що TypeScript - це строго типізована та компільована мова, що може бути ближчою до
+        програмістів Java, C# і інших строго типізованих мов. На виході компілятор створює той самий JavaScript, який
+        потім виконується браузером. Однак строга типізація зменшує кількість потенційних помилок, які могли б виникнути
+        при розробці на JavaScript.
     </p>
     <p>
-        По-друге, TypeScript реалізує багато концепцій, які є властивими об'єктно-орієнтованим мовам, таким як інкапсуляція, наслідування, поліморфізм та модифікатори доступу тощо.
+        По-друге, TypeScript реалізує багато концепцій, які є властивими об'єктно-орієнтованим мовам, таким як
+        інкапсуляція, наслідування, поліморфізм та модифікатори доступу тощо.
     </p>
 </section>
 
 <section class="slide">
     <h2>TypeScript</h2>
     <p>
-        По-третє, потенціал TypeScript дозволяє швидше і простіше писати великі складні програми, відповідно їх легше підтримувати, розвивати, масштабувати та тестувати, ніж на стандартному JavaScript.
+        По-третє, потенціал TypeScript дозволяє швидше і простіше писати великі складні програми, відповідно їх легше
+        підтримувати, розвивати, масштабувати та тестувати, ніж на стандартному JavaScript.
     </p>
     <p>
-        По-четверте, TypeScript розвивається як проект з відкритим кодом і, як і багато інших проектів, розміщений на GitHub. Адреса репозиторію -
-        <a href="https://github.com/Microsoft/TypeScript" target="_blank">https://github.com/Microsoft/TypeScript</a>. Крім того, він є крос-платформеним, що означає, що для розробки ми можемо використовувати як Windows, так і MacOS або Linux.
+        По-четверте, TypeScript розвивається як проект з відкритим кодом і, як і багато інших проектів, розміщений на
+        GitHub. Адреса репозиторію -
+        <a href="https://github.com/Microsoft/TypeScript" target="_blank">https://github.com/Microsoft/TypeScript</a>.
+        Крім того, він є крос-платформеним, що означає, що для розробки ми можемо використовувати як Windows, так і
+        MacOS або Linux.
     </p>
 </section>
 
@@ -106,7 +119,8 @@
     <div class="columns two">
         <div>
             <ol>
-                <li>Встановити Node.js на ваш компʼютер (<a href="https://nodejs.org/en" target="_blank">nodejs.org</a>)</li>
+                <li>Встановити Node.js на ваш компʼютер (<a href="https://nodejs.org/en" target="_blank">nodejs.org</a>)
+                </li>
                 <li>Відкрити проект у редакторі коду</li>
                 <li>Ініціалізувати новий проект - npm init -y</li>
                 <li>Встановити npm пакет TypeScript - npm i -D typescript</li>
@@ -153,6 +167,48 @@
 </section>
 
 <section class="slide">
+    <h2>Типи даних</h2>
+    <p>
+        У TypeScript існують такі базові типи:
+    </p>
+    <div class="columns two">
+        <div>
+            <ul>
+                <li>boolean: логічне значення true або false</li>
+                <li>number: числове значення</li>
+                <li>string: рядки</li>
+                <li>Array: масиви</li>
+                <li>кортежі</li>
+                <li>Enum: перелічення</li>
+                <li>Any: довільний тип</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>Symbol</li>
+                <li>null та undefined: відповідають значенням null та undefined у JavaScript</li>
+                <li>Never: також представляє відсутність значення і використовується як тип, що повертається функціями,
+                    які генерують або повертають помилку
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<section class="slide">
+    <h2>Функції</h2>
+    <p>
+        TypeScript визначає функції за допомогою ключового слова function, але при цьому додає додаткові можливості з роботи з функціями. Зокрема, можна визначити тип переданих параметрів і тип поверненого значення.
+        Функція може мати параметри, які вказуються після назви функції у дужках через кому. Через двокрапку після імені параметра вказується його тип.
+    </p>
+    <p>
+        Кожна функція має свій тип, як і звичайні змінні. Тип функції фактично представляє комбінацію типів параметрів і типу, який повертається. У загальному вигляді визначення типу функції виглядає наступним чином: (параметр1: тип, параметр2: тип,...параметрN: тип) => тип_результата;
+        У дужках йде перелік через кому параметрів і їх типів. Після списку параметрів через оператор => вказується тип, який повертається функцією.
+
+    </p>
+</section>
+
+<section class="slide">
     <h2 class="shout">Дякую за увагу!</h2>
 </section>
 
@@ -161,3 +217,4 @@
 <script src="shower.js"></script>
 </body>
 </html>
+
