Updated 1-st lecture presentation (TypeScript - intro)

--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -167,6 +167,11 @@
 </section>
 
 <section class="slide">
+    <h2>Змінні та константи. Відмінності між var та let/const</h2>
+    <img src="pictures/8.jpg" alt="" width="600" style="display: block; margin: 0 auto">
+</section>
+
+<section class="slide">
     <h2>Типи даних</h2>
     <p>
         У TypeScript існують такі базові типи:
@@ -204,7 +209,6 @@
     <p>
         Кожна функція має свій тип, як і звичайні змінні. Тип функції фактично представляє комбінацію типів параметрів і типу, який повертається. У загальному вигляді визначення типу функції виглядає наступним чином: (параметр1: тип, параметр2: тип,...параметрN: тип) => тип_результата;
         У дужках йде перелік через кому параметрів і їх типів. Після списку параметрів через оператор => вказується тип, який повертається функцією.
-
     </p>
 </section>
 
