Updated Lecture-1 (TypeScript intro)

--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -40,14 +40,29 @@
     </ol>
 </section>
 
+
 <section class="slide">
     <h2>TypeScript</h2>
-    <img src="pictures/1.jpg" alt="" width="764" style="display: block; margin: 0 auto">
+    <p>У JavaScript слабка динамічна типізація. Це означає дві речі:</p>
+    <ul>
+        <li>Під час операції зі змінними різних типів вони будуть автоматично приведені до одного типу.</li>
+        <li>Будь-яка змінна може довільно змінювати свій тип під час виконання програми.</li>
+    </ul>
+    <p>Ці властивості мови часто ускладнюють розробку великих і надійних додатків. Тому з'явилися рішення, які додають у JavaScript строгу статичну типізацію. «Строга» означає заборону автоматичного приведення типів, “статична” означає, що перевірка типів відбувається на етапі написання коду.</p>
+    <p>Рішення: TypeScript, <a href="https://rescript-lang.org" target="_blank">Rescript</a>, <a href="https://flow.org" target="_blank">Flow</a> і
+        <a href="https://hegel.js.org" target="_blank">Hegel</a>.</p>
+</section>
+
+
+<section class="slide">
+    <h2>TypeScript</h2>
+    <img src="pictures/1.jpg" alt="" width="500" style="display: block; margin: 0 auto">
     <p>
         <b>TypeScript</b> – це строго типізована мова програмування, яка базується
         на JavaScript.
         <a href="https://www.typescriptlang.org/" target="_blank">https://www.typescriptlang.org/</a>
     </p>
+    <p>Головна відмінність TypeScript від JavaScript - можливість додавати анотації типів до змінних, аргументів функцій і їхніх значень, що повертаються.</p>
 </section>
 
 <section class="slide">
@@ -89,6 +104,7 @@
         Крім того, він є крос-платформеним, що означає, що для розробки ми можемо використовувати як Windows, так і
         MacOS або Linux.
     </p>
+    <p>По-п'яте, помилки розбіжності типів будуть помітні на стадії написання коду. Тобто не потрібно запускати програму, щоб дізнатися про помилки в типізації.</p>
 </section>
 
 <section class="slide">
