Added Lecture 2, refactored presentation core

--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -4,7 +4,7 @@
     <title>TypeScript Fundamentals</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../../../core/styles/styles.css">
     <style>
         .shower {
             --slide-ratio: calc(16 / 9);
@@ -218,7 +218,7 @@
 
 <div class="progress"></div>
 
-<script src="shower.js"></script>
+<script src="../../../core/shower.js"></script>
 </body>
 </html>
 
