--- a/typescript/02-classes-and-interfaces/examples/index.html
+++ b/typescript/02-classes-and-interfaces/examples/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
     <head>
         <meta charset="utf-8">
-        <title>TypeScript Fundamentals. Урок 2. Класи та інтерфейси</title>
+        <title>TypeScript Fundamentals. Лекція 2. Класи та інтерфейси</title>
     </head>
     <body>
         <h1>TypeScript Fundamentals</h1>
