Updated generics lecture-3

--- a/typescript/03-generics/presentation/index.html
+++ b/typescript/03-generics/presentation/index.html
@@ -181,7 +181,77 @@
 
 <section class="slide">
     <h2>Generics: область видимості параметрів</h2>
-    <div class="columns two"></div>
+    <div class="columns two">
+        <div style="font-size: 16px;">
+            Під час оголошення класів (зокрема й класових виразів)
+            та інтерфейсів, область видимості параметрів типу обмежується областю оголошення і тілом.
+            <br>
+            У випадках, коли клас/інтерфейс розширює інший клас/інтерфейс,
+            який оголошено як узагальнений, нащадок зобов'язаний вказати типи для свого предка.
+            Нащадок як аргумент типу своєму пращуру може вказати не тільки конкретний тип,
+            а й тип, представлений власними параметрами типу.
+        </div>
+        <div>
+            <img src="pictures/7.png" alt="" width="200">
+            <br>
+            <img src="pictures/8.png" alt="" width="400">
+        </div>
+    </div>
+</section>
+
+<section class="slide">
+    <h2>Generics</h2>
+    <div class="columns two">
+        <div style="font-size: 16px;">
+            Належність параметра типу до конкретного типу даних
+            встановлюється в момент передачі аргументів типу.
+            При цьому конкретні типи даних вказуються в парі кутових дужок,
+            а кількість конкретних типів має відповідати кількості обов'язкових параметрів типу.
+            <br>
+            Якщо узагальнений тип вказується як тип даних, то він зобов'язаний містити анотацію
+            узагальнення.
+        </div>
+        <div>
+            <img src="pictures/9.png" alt="" width="400">
+            <br>
+            <img src="pictures/10.png" alt="" width="400">
+        </div>
+    </div>
+</section>
+
+<section class="slide">
+    <h2>Generics</h2>
+    <div class="columns two">
+        <div style="font-size: 16px;">
+            Коли всі обов'язкові параметри типу використовуються в параметрах конструктора,
+            при створенні екземпляра класу анотацію узагальнення можна опускати.
+            У такому разі виведення типів визначить приналежність до типів за встановлюваними значеннями.
+            Якщо параметри є необов'язковими і значення не буде передано,
+            то виведення типів визначить приналежність параметрів типу до типу даних unknown.
+        </div>
+        <div>
+            <img src="pictures/11.png" alt="" width="400">
+        </div>
+    </div>
+</section>
+
+<section class="slide">
+    <h2>Generics: Параметри типу <br> - extends (generic constraints)</h2>
+
+        <div style="font-size: 19px;">
+            Крім того, що параметри типу можна вказувати як конкретний тип, вони також можуть розширювати
+            інші типи, зокрема й інші параметри типу. Такий механізм потрібен,
+            коли значення всередині узагальненого типу повинні мати обмежений набір ознак.
+            Ключове слово extends розміщується лівіше розширюваного типу і правіше ідентифікатора параметра
+            типу &lt;T extends Type&gt;. Як розширюваний тип може бути вказано як конкретний тип даних,
+            так і інший параметр типу. При чому якщо один параметр типу розширює інший,
+            немає різниці, в якому порядку вони оголошуються. Якщо параметр типу обмежений іншим параметром типу,
+            то таке обмеження називають неприкритим обмеженням типу (naked type constraint),
+            <br>
+            Механізм розширення потрібен у тих випадках, у яких параметр типу має володіти
+            заданими характеристиками, необхідними для виконання конкретних операцій над цим типом.
+        </div>
+
 </section>
 
 <section class="slide">
