Updated generics lecture-3

--- a/typescript/03-generics/presentation/index.html
+++ b/typescript/03-generics/presentation/index.html
@@ -237,21 +237,99 @@
 
 <section class="slide">
     <h2>Generics: Параметри типу <br> - extends (generic constraints)</h2>
+    <div style="font-size: 19px;">
+        Крім того, що параметри типу можна вказувати як конкретний тип, вони також можуть розширювати
+        інші типи, зокрема й інші параметри типу. Такий механізм потрібен,
+        коли значення всередині узагальненого типу повинні мати обмежений набір ознак.
+        Ключове слово extends розміщується лівіше розширюваного типу і правіше ідентифікатора параметра
+        типу &lt;T extends Type&gt;. Як розширюваний тип може бути вказано як конкретний тип даних,
+        так і інший параметр типу. При чому якщо один параметр типу розширює інший,
+        немає різниці, в якому порядку вони оголошуються. Якщо параметр типу обмежений іншим параметром типу,
+        то таке обмеження називають неприкритим обмеженням типу (naked type constraint),
+        <br>
+        Механізм розширення потрібен у тих випадках, у яких параметр типу має володіти
+        заданими характеристиками, необхідними для виконання конкретних операцій над цим типом.
+    </div>
+</section>
 
-        <div style="font-size: 19px;">
-            Крім того, що параметри типу можна вказувати як конкретний тип, вони також можуть розширювати
-            інші типи, зокрема й інші параметри типу. Такий механізм потрібен,
-            коли значення всередині узагальненого типу повинні мати обмежений набір ознак.
-            Ключове слово extends розміщується лівіше розширюваного типу і правіше ідентифікатора параметра
-            типу &lt;T extends Type&gt;. Як розширюваний тип може бути вказано як конкретний тип даних,
-            так і інший параметр типу. При чому якщо один параметр типу розширює інший,
-            немає різниці, в якому порядку вони оголошуються. Якщо параметр типу обмежений іншим параметром типу,
-            то таке обмеження називають неприкритим обмеженням типу (naked type constraint),
-            <br>
-            Механізм розширення потрібен у тих випадках, у яких параметр типу має володіти
-            заданими характеристиками, необхідними для виконання конкретних операцій над цим типом.
-        </div>
+<section class="slide">
+    <h2>Generics: підсумки</h2>
+    <div style="font-size: 16px;">
+        <p> Дженерики в TypeScript використовуються для того, щоб створювати функції, класи, інтерфейси, або типи, які
+            можуть працювати з різними типами даних, залишаючись при цьому типовобезпечними. Основна ідея дженериків
+            полягає в тому, щоб уникати дублювання коду і забезпечувати більшу гнучкість та повторне використання коду.
+        </p>
+        <ul>
+            <li>Повторне використання коду. Замість того, щоб створювати окремі функції для роботи з різними типами
+                даних, можна
+                створити одну функцію або клас, яка працює з будь-яким типом.
+            </li>
+            <li>Типова безпека. Дженерики дозволяють зберегти інформацію про типи, з якими працює код. Це дозволяє
+                TypeScript
+                перевіряти типи під час компіляції, що допомагає уникнути помилок під час виконання.
+            </li>
+            <li>Гнучкість. Дженерики дозволяють визначати типи пізніше, коли викликається функція або створюється
+                екземпляр
+                класу. Це означає, що один і той же код може працювати з різними типами даних без втрати типової
+                безпеки.
+            </li>
+            <li>
+                Сумісність з різними типами. Дженерики забезпечують можливість створення функцій та класів, які можуть
+                працювати
+                з будь-якими типами даних, зберігаючи при цьому інформацію про типи.
+            </li>
+        </ul>
+    </div>
+</section>
 
+<section class="slide">
+    <h2>Generics: компетенції</h2>
+    <div style="font-size: 16px;">
+        Для junior:
+        <ul>
+            <li>
+                Основи дженериків: junior має знати, що таке дженерики, як вони використовуються в функціях і класах, і
+                чому вони корисні.
+                Приклад: junior повинен вміти створити просту функцію з використанням дженериків, наприклад, функцію
+                identity&lt;T&gt;(arg: T): T.
+            </li>
+            <li>
+                Типова безпека. Важливо розуміти, що дженерики дозволяють створювати функції та класи, які можуть
+                працювати з різними типами, зберігаючи типову безпеку.
+                Наприклад, створення масиву певного типу Array&lt;T&gt;.
+            </li>
+            <li>
+                Прості випадки використання: junior має знати, як використовувати дженерики в простих випадках, таких як
+                передачі типу в функції або класах.
+            </li>
+        </ul>
+    </div>
+</section>
+
+<section class="slide">
+    <h2>Generics: компетенції</h2>
+    <div style="font-size: 16px;">
+        Для middle:
+        <ul>
+            <li>
+                Обмеження дженериків, middle має знати, як накладати обмеження на дженерики за допомогою extends, щоб
+                типи
+                відповідали певним вимогам.
+            </li>
+            <li>
+                Типізація складних структур даних, middle має знати, як використовувати дженерики для типізації складних
+                структур даних, таких як масиви або словники.
+            </li>
+            <li>
+                Робота з декількома дженериками, middle повинен розуміти, як використовувати декілька дженериків у
+                функціях і класах, а також як вони взаємодіють між собою.
+            </li>
+            <li>
+                Успадкування дженериків, middle повинен розуміти, як дженерики працюють в контексті успадкування класів
+                і інтерфейсів.
+            </li>
+        </ul>
+    </div>
 </section>
 
 <section class="slide">
