Updated lecture-4 (Modules and namespaces)

--- a/typescript/04-modules/presentation/index.html
+++ b/typescript/04-modules/presentation/index.html
@@ -28,11 +28,25 @@
 </section>
 
 <section class="slide">
-    <h2>Простір імен</h2>
-    <p>
-        <b>Простір імен</b> - механізм для групування коду та визначення окремих областей видимості.
-    </p>
-    <img src="pictures/1.png" width="500">
+    <h2>Простір імен (Namespace)</h2>
+    <div class="columns two" style="font-size: 16px;">
+        <div>
+            <p>Модулі розв'язують проблему різнорідних сутностей і колізій за допомогою рознесення коду по декількох
+                файлах. Щоб
+                колізії не виникали в межах одного файлу, використовують механізм просторів імен namespace.</p>
+            <p>
+                <b>Простір імен</b> - механізм для групування коду та визначення окремих областей видимості.
+            </p>
+            <p>Найбільше цей механізм корисний авторам бібліотек і обгорток з типами @types/. Вони укладають усі
+                інтерфейси в
+                один namespace, що збігається з назвою бібліотеки. Це гарантує відсутність колізій імен і спрощує
+                користувачам
+                злиття інтерфейсів.</p>
+        </div>
+        <div>
+            <img src="pictures/1.png" width="300">
+        </div>
+    </div>
 </section>
 
 <section class="slide">
@@ -120,6 +134,21 @@
     <p><b>Webpack</b> – інструмент для збирання JS файлів у пакети з дотриманням правильного
         порядку використання файлів. <a href="https://webpack.js.org/" target="_blank">https://webpack.js.org/</a></p>
     <img src="pictures/7.png" alt="" width="600">
+</section>
+
+<section class="slide">
+    <h2>Webpack</h2>
+    <p>Для
+        налаштування використовується файл webpack.config.js, який містить конфігурацію
+        Webpack з основними параметрами:
+    </p>
+    <ul>
+        <li><b>entry</b>: визначає вхідні файли для створення збірок;</li>
+        <li><b>output</b>: визначає конфігурацію вихідних файлів;</li>
+        <li><b>resolve</b>: визначає, як будуть оброблятися файли, якщо вони не мають розширень;</li>
+        <li><b>module.rules</b>: визначає завантажувачі, які завантажують модулі;</li>
+        <li><b>plugins</b>: визначає застосовувані плагіни.</li>
+    </ul>
 </section>
 
 <section class="slide">
