Lecture 5 (Vue.js): added examples

--- a/vuejs/01-intro/presentation/index.html
+++ b/vuejs/01-intro/presentation/index.html
@@ -169,6 +169,21 @@
 </section>
 
 <section class="slide">
+    <h2>Vanilla JS vs Vue.js</h2>
+    <p>Приклади!!!</p>
+</section>
+
+<section class="slide">
+    <h2>Vanilla JS vs Vue.js</h2>
+    <p>Vue.js значно спрощує роботу з DOM, автоматизуючи такі операції, як умовне рендеринг та ітерації. </p>
+    <p>У чистому JavaScript потрібно вручну додавати слухачі подій і оновлювати DOM, тоді як у Vue.js весь процес
+        реактивного оновлення відбувається автоматично, що робить код більш простим і чистим.</p>
+    <p>Чистий JavaScript вимагає більше ручного управління станом і DOM-елементами.</p>
+    <p>Vue.js значно спрощує обробку форм завдяки двосторонній прив'язці даних (v-model) і директивам для подій.</p>
+</section>
+
+
+<section class="slide">
     <h2>Vue CLI (deprecated)</h2>
     <div class="columns two">
         <div style="font-size: 19px;">
