Updated lecture 5 (Vue.js)

--- a/vuejs/01-intro/presentation/index.html
+++ b/vuejs/01-intro/presentation/index.html
@@ -33,6 +33,25 @@
 </section>
 
 <section class="slide">
+    <h2>Що таке js фреймворк</h2>
+    <p>A JavaScript framework is a pre-written collection of code that simplifies common tasks in web development. It
+        provides a structured way to build web applications, enforce best practices, and manage complex functionalities.
+        Key components of a JavaScript framework include <b>data binding, routing, and a component-based
+            architecture</b>.</p>
+</section>
+
+<section class="slide">
+    <h2>Key Concepts: Data Binding, Routing and Component Architecture</h2>
+    <p>
+        <b>Зв'язування даних</b> - це механізм, який встановлює зв'язок між даними у застосунку та
+        інтерфейсом користувача. Це дозволяє при зміні даних автоматично оновлювати інтерфейс і навпаки.</p>
+    <p><b>Маршрутизація (роутинг) </b>- це процес визначення того, яке представлення або компонент повинен
+        відображатися на основі поточної URL-адреси.</p>
+    <p><b>Компонентна архітектура </b>- декомпозиція застосунку на багаторазові,
+        самодостатні будівельні блоки.</p>
+</section>
+
+<section class="slide">
     <h2>Що таке Vue.js?</h2>
     <p><b>Vue.js</b> — це фреймворк, який працює на JavaScript,
         створений для розробки користувацьких інтерфейсів.
