Updated lecture 5 (Vue.js)

--- a/vuejs/01-intro/presentation/index.html
+++ b/vuejs/01-intro/presentation/index.html
@@ -189,18 +189,17 @@
 
 <section class="slide">
     <h2>Vanilla JS vs Vue.js</h2>
-    <p>Приклади!!!</p>
+    <p>Приклади у директорії <b>examples</b></p>
 </section>
 
 <section class="slide">
     <h2>Vanilla JS vs Vue.js</h2>
-    <p>Vue.js значно спрощує роботу з DOM, автоматизуючи такі операції, як умовне рендеринг та ітерації. </p>
+    <p>Vue.js значно спрощує роботу з DOM, автоматизуючи такі операції, як умовний рендеринг та ітерації.</p>
     <p>У чистому JavaScript потрібно вручну додавати слухачі подій і оновлювати DOM, тоді як у Vue.js весь процес
         реактивного оновлення відбувається автоматично, що робить код більш простим і чистим.</p>
     <p>Чистий JavaScript вимагає більше ручного управління станом і DOM-елементами.</p>
     <p>Vue.js значно спрощує обробку форм завдяки двосторонній прив'язці даних (v-model) і директивам для подій.</p>
 </section>
-
 
 <section class="slide">
     <h2>Vue CLI (deprecated)</h2>
@@ -224,15 +223,7 @@
 <section class="slide">
     <h2>create-vue</h2>
     <p>create-vue - The recommended way to start a Vite-powered Vue project (<a
-            href="https://github.com/vuejs/create-vue">create-vue</a>)/p>
-</section>
-
-<section class="slide">
-
-</section>
-
-<section class="slide">
-
+            href="https://github.com/vuejs/create-vue">create-vue</a>)</p>
 </section>
 
 <section class="slide">
