--- a/vuejs/example/3-redering-loop-vue.html
+++ b/vuejs/example/3-redering-loop-vue.html
@@ -15,8 +15,8 @@
         <li v-for="(item, index) in items" :key="index">{{ item }}</li>
     </ul>
     <h2>Vue.js автоматично відслідковує зміни в масиві та оновлює DOM, коли масив змінюється.</h2>
-    <!--    <input v-model="text">-->
-    <!--    <button @click="items.push(text)">Додати li</button>-->
+    <input v-model="text">
+    <button @click="items.push(text)">Додати li</button>
 </div>
 
 <script>
