--- a/vuejs/03-composition-options-api/presentation/index.html
+++ b/vuejs/03-composition-options-api/presentation/index.html
@@ -31,10 +31,11 @@
 
 <section class="slide">
     <h2>Options API vs Composition API</h2>
-    <p>Vue.js пропонує два різних підходи до створення логіки та поведінки компонентів: <b>Options API</b> та <b>Composition
-        API</b>
-    </p>
-    <div style="font-size: 19px;">
+    <div style="font-size: 18px;">
+        <p>Vue.js пропонує два різних підходи до створення логіки та поведінки компонентів: <b>Options API</b> та <b>Composition
+            API (<a href="https://ua.vuejs.org/guide/introduction.html#api-styles" target="_blank">Api styles</a>)</b>
+        </p>
+        <p>API у Vue.js — це набір інструментів, функцій та об'єктів, які Vue.js надає для створення компонентів, керування станом додатка та взаємодії з DOM.</p>
         <p>
             <b>Options API </b>— це традиційний спосіб побудови логіки та поведінки компонентів Vue, і він був основним
             методом побудови компонентів у Vue з моменту його створення. Це передбачає використання набору параметрів,
