Updated Lecture-7 (composable example)

--- a/vuejs/03-composition-options-api/presentation/index.html
+++ b/vuejs/03-composition-options-api/presentation/index.html
@@ -163,7 +163,7 @@
 <section class="slide">
     <h2>Computed</h2>
     <p>
-        Обчислені властивості (`computed`) – це
+        Обчислені властивості (computed) – це
         функції, які використовуються для
         обчислення та повернення значення на
         основі інших властивостей або даних в
