Updated presentations for lecture 6 and lecture 7.

--- a/vuejs/02-components-templates-directives/presentation/index.html
+++ b/vuejs/02-components-templates-directives/presentation/index.html
@@ -49,7 +49,7 @@
         можна багаторазово використовувати, і думати про кожну частину окремо. <a
                 href="https://ua.vuejs.org/guide/essentials/component-basics.html" target="_blank">Documentation.</a>
     </p>
-    <img src="pictures/components.png" alt="" width="650" style="display: block; margin: 0 auto">
+    <img src="pictures/component.png" alt="" width="650" style="display: block; margin: 0 auto">
 </section>
 
 <section class="slide">
