--- a/vuejs/03-composition-options-api/presentation/index.html
+++ b/vuejs/03-composition-options-api/presentation/index.html
@@ -14,7 +14,7 @@
 <body class="shower list">
 
 <header class="caption">
-    <h1>Options API vs Composition API. .</h1>
+    <h1>Options API vs Composition API.</h1>
 </header>
 
 <section class="slide">
@@ -35,7 +35,8 @@
         <p>Vue.js пропонує два різних підходи до створення логіки та поведінки компонентів: <b>Options API</b> та <b>Composition
             API (<a href="https://ua.vuejs.org/guide/introduction.html#api-styles" target="_blank">Api styles</a>)</b>
         </p>
-        <p>API у Vue.js — це набір інструментів, функцій та об'єктів, які Vue.js надає для створення компонентів, керування станом додатка та взаємодії з DOM.</p>
+        <p>API у Vue.js — це набір інструментів, функцій та об'єктів, які Vue.js надає для створення компонентів,
+            керування станом додатка та взаємодії з DOM.</p>
         <p>
             <b>Options API </b>— це традиційний спосіб побудови логіки та поведінки компонентів Vue, і він був основним
             методом побудови компонентів у Vue з моменту його створення. Це передбачає використання набору параметрів,
