--- a/vuejs/04-props-events-watch/presentation/index.html
+++ b/vuejs/04-props-events-watch/presentation/index.html
@@ -14,7 +14,7 @@
 <body class="shower list">
 
 <header class="caption">
-    <h1>Options API vs Composition API.</h1>
+    <h1>Основи роботи з компонентами: props, event handling, watchers.</h1>
 </header>
 
 <section class="slide">
@@ -57,7 +57,7 @@
 <section class="slide">
     <h2>Що таке props? (Реквізити)</h2>
     <p>
-        Всі props формують односторонній зв’язку між дочірньою та батьківською властивостями: коли батьківська
+        Всі props формують односторонню зв’язку між дочірньою та батьківською властивостями (props): коли батьківська
         властивість оновлюється, вона переходить до дочірньої, але не навпаки.
     </p>
     <p>
